update changes & version
git-svn-id: https://my-svn.assembla.com/svn/arbez/svndjango/trunk@432 e0e46c49-be69-4f5a-ad62-21024a331aea

--- a/changes/history.txt
+++ b/changes/history.txt
@@ -1,3 +1,9 @@
+0.2 (07-30-2009)
+================
+
+ * Declare sample SubversionedModel as an abstract base class so django won't create
+   a pointless database table for it.
+
 0.1 (07-24-2009)
 ================
 
