--- a/changes/changes.txt
+++ b/changes/changes.txt
@@ -1,1 +1,4 @@
-no changes yet.
+Initial release. This package was previously called `svndjango`. It was
+redesigned from the ground up and renamed `django-vcexport` to describe
+more accurately what it does.
+
