--- a/changes/changes.txt
+++ b/changes/changes.txt
@@ -1,4 +1,2 @@
-Brown-bag release; made ``export_to_repository`` function available as
-public API (``vcexport.export_to_repository``)
-
+* Made ``Exporter`` importable as ``vcexport.Exporter``
 
