add bzr backend, and (pretend to) remove hg backend
git-svn-id: https://my-svn.assembla.com/svn/arbez/django-vcexport/trunk@1904 e0e46c49-be69-4f5a-ad62-21024a331aea

--- a/changes/changes.txt
+++ b/changes/changes.txt
@@ -1,2 +1,5 @@
 * Made ``Exporter`` importable as ``vcexport.Exporter``
 
+* Removed 'hg' option for VCEXPORT_BACKEND, since sven no longer supports this.
+
+* Added new 'bzr' option for VCEXPORT_BACKEND.
